# monisens

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yaml  make-migration.sh
.github/workflows/: rust.yml
app_data/: index.html
app_data/static/: ControlPanel.022ad8df.js  ControlPanel.50cb2d62.js  ControlPanel.604302d9.js  ControlPanel.a35745a6.js  ControlPanel.aa98ecfc.js  ControlPanel.be8e2948.js  ControlPanel.cacc1b2d.js  ControlPanel.e85a8937.js  ControlPanel.fe4c1f8d.js  Device.05a85ab5.js  Device.26e9443b.js  Device.28639307.js  Device.700fc38e.js  Device.7d8854ac.js  Device.83bcfc9c.js  Device.a7039b30.js  Device.e003e7ff.js  Device.e22eb070.js  Favourites.021837a5.js  Favourites.280143aa.js  Favourites.3f7055b6.js  Favourites.539d5c45.js  Favourites.69d4a4c4.js  Favourites.7e490798.js  Favourites.a5facf54.js  Favourites.aa5f3dc0.js  Favourites.bcb0c73c.js  GraphPanel.4be08cdb.js  MonitorPanel.43a10e85.js  MonitorPanel.554693c5.js  MonitorPanel.65725f0f.js  MonitorPanel.a396cb6d.js  MonitorPanel.a549419b.js  MonitorPanel.a8de7d91.css  MonitorPanel.ab3da08b.css  MonitorPanel.b83460c3.js  MonitorPanel.c6d527f7.js  MonitorPanel.d2549c5f.js  NewDevice.00337a8f.js  NewDevice.1d649b50.css  (+32 more)
macros/: Cargo.toml
macros/src/: lib.rs
migrations/: 20230129162531_v1-device.sql  20230129191946_v1-device-sensor.sql  20230424201152_v1-monitor-conf.sql
module/: monisens_api.h  monisens_def.h
src/: main.rs  table.rs
src/app/: mod.rs
src/controller/: conf.rs  controller.rs  error.rs  mod.rs  model.rs  msg.rs
src/controller/error/: common.rs  mod.rs
src/controller/interface/: mod.rs  module.rs  service.rs
src/controller/model/: mod.rs  (+3 more)
src/logger/: mod.rs
src/module/: bindings-gen.rs  bindings.rs  bindings_gen.rs  conv.rs  error.rs  mod.rs  model.rs
src/query/: builder.rs  error.rs  expr.rs  mod.rs  sqlizer.rs  tool.rs
src/repo/: error.rs  mod.rs  querier.rs
src/service/: db_model.rs  device.rs  error.rs  mod.rs  model.rs  service.rs
src/table/: error.rs  field.rs  index.rs  mod.rs  test.rs
src/tool/: macros.rs  mod.rs  query_trait.rs  test.rs  validation.rs
src/webserver/: config.rs  error.rs  mod.rs  model.rs  route.rs
(+12 files in other folders)
