[package]
name = "monisens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "macros" }

sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
regex = "1"
lazy_static = "1"
thiserror = "1"
libc = "0.2.132"
libloading = "0.7.3"
actix-web = "4.3.1"
actix-multipart = { version = "0.6.0", features = ["tempfile"]}
actix-files = "0.6.2"
actix-cors = "0.6.4"
serde = "1"
utoipa = { version = "3", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "3", features = ["actix-web"] }
